--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,13 +1,13 @@
+{% set name = "python-xlib" %}
 {% set version = "0.31" %}
 
 package:
-  name: python-xlib
+  name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  fn: python-xlib-{{ version }}.tar.bz2
-  url: https://github.com/python-xlib/python-xlib/releases/download/{{ version }}/python-xlib-{{ version }}.tar.bz2
-  sha256: 59a9d48b984de6df4fbf736a2010d997f668d63f1e6cf078ce55a930fbc919e6
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/python-xlib-{{ version }}.tar.gz
+  sha256: 74d83a081f532bc07f6d7afcd6416ec38403d68f68b9b9dc9e1f28fbf2d799e9
 
 build:
   number: 0
